[tool.poetry]
name = "sirius"
version = "0.1.0"
description = ""
authors = ["Flávio Manzi Alves <manzigyn@gmail.com>"]
readme = "README.md"
packages = [{include = "sirius", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^0.10.1"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




